@@ -5,7 +5,7 @@ use strict;
 #------------------------------------------------------------------------------
 package Satsuki::Base;
 #------------------------------------------------------------------------------
-our $VERSION = '2.50';
+our $VERSION = '2.60';
 our $RELOAD;
 my %StatCache;
 #------------------------------------------------------------------------------
