@@ -3,6 +3,10 @@
 *Ver3.5x : 2020/xx/xx
 
 -【httpd】.gitフォルダへのアクセスを禁止しました。
+-【Base/System】
+--【Compiler】forexecをforeachと書けるようにしました。
+--【Compiler】forexec, ifexec（elseなし）の begin を省略できるようにしました。
+--【Compiler】"++x"や"y--"等の記述を可能にしました。
 
 *Ver3.40 : 2020/02/03
 
